fixed timer not visible on low res 720p displays

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,8 @@
 .box {
 	font-family: Inconsolata, monospace;
 	font-weight: 700;
-	padding: 200px 200px;
+	margin: 50px;
+	width: 70%;
 	font-size: 21pt;
 	display: flex;
 	flex-wrap: wrap;
