--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,13 @@ body {
 }
 
 html,
-body,
-#root {
+body {
 	height: 100%;
 	width: 100%;
+}
+
+#root {
+	height: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
